# opencog-yenat

./: ex.scm
examples/atomtypes/: CustomAtomTypesTester.cc  atom_types.script
lib/: opencog5.conf
opencog/: CMakeLists.txt
opencog/cogserver/scm/: config.scm
opencog/destin/: CMakeLists.txt  DestinAtomTypesModule.cc  DestinAtomTypesModule.h  DestinAtomTypesTester.cc  DestinAtomTypesTester.h  atom_types.script  atom_types_init.cc
opencog/moviedb/: CMakeLists.txt  moviedb.scm
opencog/moviedb/types/: CMakeLists.txt  atom_types_init.cc
opencog/python/: matrix_multiplication.py  requirements.txt
opencog/python/ConvAE/: input_for_3layer.scm  matrix_mutliplicaton.py  three_layer_neural_net.py
opencog/python/ConvAE/scripts/: convae_destin_1.py
opencog/python/destin/: __init__.py
opencog/python/preload_functions/: 3layer_neural_net.py  input_for_3layer.scm  input_for_matrix.scm  matrix_mutliplicaton.py  return_multiple_atoms.py
opencog/python/preload_functions/scripts/: convae_destin_1.py  convae_destin_1.py~
opencog/scm/: atom-types.scm
